--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -1,7 +1,13 @@
 @charset "ISO-8859-1";
 
+
+h3{
+	text-align: center;
+}
+
 input {
 	border: 2px;
 	border-style: dashed;
 	border-color: yellow;
+	width: 100%;
 }
